	- Added stat numbers to the stats menu
	- Added a boost variable to the player class

//Dustin Knowlton 7:17pm
	-few small adjustments to the move class, failed to fix enemy collision.


//Juri Kiin 3:07 PM	3/23/16
	- Created the Enemy Creation tool that allows the user to input stats for the enemy, and it creates a binary file with those stats stored.
	- Added a ReadFiles() method that loads in the data from the binary files, and created an enemy object with that data.

//Juri Kiin 10:42 AM	3/28/16
	- Fixed the external tool so it works properly


//Juri Kiin 4:58 PM	3/30/16
	- Fixed so the players created with the tool are made and drawn to the screen.
	- Collisions still not working correctly
	- Added code to load the correct background based on what level the player is in.

//Juri Kiin 11:44 PM 	4/5/16
	-Added ArrowSpawner.cs: creates arrow objects that are used for the blocking mechanic
	-Added Arrow.cs: Creates an object to hold the arrow texture and the rectangle.
	-Added another gamestate that controls the combat phases, and does the respective job
	-Cleaned up unused variables
	
//James Friedenberg + Juri Kiin 4:50 PM 4/6/16
	-Fixed blocking mechanic so random arrows spawn and move across the screen during combat
	-Loaded in new protag/antag sprites

//Dustin Knowlton 5:05PM 4/6/16
	-Collision functions properly!
	-Enemy is too large
	-Combat cycling atk->def

//James Friedenberg + Juri Kiin + Austin Ford 11:57 AM 4/11/2016
	-Fixed blocking hitbox 
	-Fixed states and health reduction so blocking mechanic is functional
	
//Dustin Knowlton 4:45PM 4/13/16
	-added Levelgen method
	-level switching should work properly
	-simply set tunnel (rectangle object) to wherever the player should go to head to the next level, intersection will gen the next.

//James Friedenberg 5:46PM 4/13/2016
	-Added Loading screen and Game Over screen and took out some debugging code

//Dustin Knowlton 6:01PM 4/13/16
	-Dialogue method added, very unfinished.
