@@ -135,6 +135,9 @@
     <Content Include="Content\UI\ArrowKey\3.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\UI\combatMeterObj.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\UI\Basic UI.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
